--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,16 +1,17 @@
 name: Terraform workflow
 
-on: workflow_dispatch
+on: [push, workflow_dispatch]
 
 jobs:
   apply:
     name: Terraform apply
-    runs-on: ubuntu-latest #runner 
+    runs-on: ubuntu-latest #runner
+    if: github.event_name == 'push'
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-      
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
@@ -23,7 +24,31 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-      
+
       - name: Terraform Apply
         run: terraform apply -auto-approve
-      
+
+  destroy:
+    name: Terraform destroy
+    runs-on: ubuntu-latest #runner
+    if: github.event_name == 'workflow_dispatch'
+    
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: eu-central-1
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Destroy
+        run: terraform destroy -auto-approve
